--- a/resources/assets/less/bem/wiki-notice.less
+++ b/resources/assets/less/bem/wiki-notice.less
@@ -17,18 +17,13 @@
  */
 
 .wiki-notice {
-  padding: 10px 0;
+  width: 100%;
+  padding: 10px 15px;
+  background-color: @osu-colour-b4;
+  color: @osu-colour-orange-1;
+  margin-bottom: 10px;
 
-  &__box {
-    width: 100%;
-    padding: 10px 20px;
-    background-color: #222;
-    border-radius: @border-radius-large;
-    color: @pink-light;
-    text-align: center;
-
-    &--important {
-      font-weight: bold;
-    }
+  &--important {
+    font-weight: bold;
   }
 }
