Update news page margin

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -263,8 +263,8 @@
   }
 
   &--news {
-    .default;
-    .default-gutter();
+    .default();
+    .default-gutter-v2();
     padding-bottom: 20px;
     padding-top: 20px;
   }
