--- a/resources/assets/less/bem/notification-popup-item-group.less
+++ b/resources/assets/less/bem/notification-popup-item-group.less
@@ -23,6 +23,15 @@
   display: flex;
   flex-direction: column;
 
+  &__collapse {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__expand {
+    margin-left: 10px;
+  }
+
   &__item {
     margin: 1px 0;
   }
@@ -31,5 +40,13 @@
     padding: 9px 0;
     display: flex;
     flex-direction: column;
+  }
+
+  &__show-more {
+    font-size: smaller;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
