--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -105,6 +105,7 @@
 @import "bem/cart-items";
 @import "bem/changelog-chart";
 @import "bem/changelog-entry";
+@import "bem/changelog-md";
 @import "bem/chat";
 @import "bem/chat-conversation";
 @import "bem/chat-conversation-list";
