--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -67,7 +67,7 @@
 
   &--news {
     padding: 20px 25px 0;
-    color: white;
+    color: @osu-colour-c1;
     font-size: @font-size--wiki;
 
     @media @mobile {
