--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -191,7 +191,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
-    font-weight: bold;
+    font-weight: 600;
 
     &--footer {
       color: @osu-colour-f1;
