--- a/resources/assets/less/bem/tournament-list.less
+++ b/resources/assets/less/bem/tournament-list.less
@@ -32,13 +32,12 @@
   }
 
   &__group {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-gap: 10px;
     margin-bottom: 10px;
 
     &--old {
-      flex-direction: row;
-      flex-wrap: wrap;
+      grid-template-columns: 1fr 1fr;
     }
   }
 
