--- a/resources/assets/less/base.less
+++ b/resources/assets/less/base.less
@@ -34,6 +34,10 @@ h2 {
   margin: 10px 0 0 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: @osu-colour-c1;
+}
+
 a {
   .link-default();
   outline-style: none;
