--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -20,12 +20,10 @@
 
 .bbcode {
   @_top: bbcode;
+  .content-font();
   word-wrap: break-word;
   line-height: 1.5;
 
-  a {
-    .link-default();
-  }
 
   h2,
   h4 {
