--- a/resources/assets/less/bem/beatmap-discussion-user-card.less
+++ b/resources/assets/less/bem/beatmap-discussion-user-card.less
@@ -99,7 +99,7 @@
   &__user-text {
     color: white;
     font-size: @font-size--normal-2;
-    font-weight: bold;
+    font-weight: 600;
     max-width: 120px;
   }
 }
