--- a/resources/assets/less/bem/beatmap-discussions-header-top.less
+++ b/resources/assets/less/bem/beatmap-discussions-header-top.less
@@ -34,7 +34,7 @@
   }
 
   &__content {
-    .default-header-overlay();
+    .light-header-overlay();
     padding: 70px 40px 0;
     background-size: cover;
     background-position: center;
