--- a/resources/assets/less/bem/beatmapsets-search-filter.less
+++ b/resources/assets/less/bem/beatmapsets-search-filter.less
@@ -28,9 +28,7 @@
   &__header {
     display: block;
 
-    font-size: @font-size--small;
-    text-transform: uppercase;
-    color: #fff;
+    color: @osu-colour-c1;
 
     margin: 15px 0 5px;
 
@@ -50,7 +48,8 @@
     }
 
     &--active {
-      color: #fff;
+      color: @osu-colour-c1;
+      font-weight: 600;
     }
   }
 
