--- a/resources/assets/less/bem/changelog-entry.less
+++ b/resources/assets/less/bem/changelog-entry.less
@@ -22,10 +22,6 @@
   padding: 5px 0;
   flex-direction: column;
 
-  a {
-    .link-default();
-  }
-
   &__icon {
     opacity: 0.5;
     font-size: 0.7em;
@@ -77,10 +73,6 @@
   }
 
   &__user-link {
-    color: inherit;
-
-    .link-hover({
-      color: inherit;
-    });
+    font-weight: bold;
   }
 }
