--- a/resources/assets/less/bem/contest-list-legend.less
+++ b/resources/assets/less/bem/contest-list-legend.less
@@ -19,6 +19,7 @@
 .contest-list-legend {
   display: flex;
   justify-content: flex-end;
+  margin: 0 -5px;
 
   &__item {
     display: inline-block;
