--- a/resources/assets/less/bem/contest-list.less
+++ b/resources/assets/less/bem/contest-list.less
@@ -17,13 +17,10 @@
  */
 
 .contest-list {
+  .default-gutter-v2();
   background-color: @osu-colour-b5;
   color: white;
   font-size: 14px;
-  font-weight: 300;
-  padding: 20px;
-  padding-top: 10px;
-  @media @mobile{
-   padding: 5px;
-  }
+  padding-top: 5px;
+  padding-bottom: $padding-top;
 }
