--- a/resources/assets/less/bem/counter-box.less
+++ b/resources/assets/less/bem/counter-box.less
@@ -147,7 +147,7 @@
 
   &__title {
     margin-right: 30px;
-    font-weight: bold;
+    font-weight: 600;
     font-size: @font-size--small;
     white-space: nowrap;
 
