--- a/resources/assets/less/bem/download-page-header.less
+++ b/resources/assets/less/bem/download-page-header.less
@@ -41,7 +41,7 @@
   }
 
   &__tagline {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 200;
     text-align: center;
     padding-bottom: 15px;
@@ -49,6 +49,6 @@
   }
 
   &__text {
-    font-size: 10px;
+    font-size: @font-size--normal;
   }
 }
