--- a/resources/assets/less/bem/game-mode-link.less
+++ b/resources/assets/less/bem/game-mode-link.less
@@ -28,9 +28,7 @@
   });
 
   @media @desktop {
-    font-size: @font-size--title-small-4;
-    padding-left: 10px; // linked to game-mode__items
-    padding-right: $padding-left;
+    font-size: @font-size--title-small;
   }
 
   &--active {
