--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -25,12 +25,6 @@
     width: auto;
   }
 
-  &--beatmapsets {
-    @media @desktop {
-      right: @gutter-v2-desktop;
-    }
-  }
-
   &__items {
     list-style: none;
     display: flex;
@@ -40,7 +34,7 @@
     flex-wrap: wrap;
 
     @media @desktop {
-      margin: -10px -20px; // 10px margin __item, 10px padding game-mode-link
+      margin: -10px -10px; // 10px margin __item
       justify-content: flex-end;
     }
   }
