--- a/resources/assets/less/bem/grid-cell.less
+++ b/resources/assets/less/bem/grid-cell.less
@@ -39,6 +39,10 @@
     flex: 1 0 100%;
   }
 
+  &--minimum {
+    flex: none;
+  }
+
   .grid--gutters > & {
     @media @desktop {
       padding-left: @flex-grid--gutter-width;
