--- a/resources/assets/less/bem/header-nav-v4.less
+++ b/resources/assets/less/bem/header-nav-v4.less
@@ -115,6 +115,7 @@
 
       &--active {
         color: @osu-colour-c1;
+        font-weight: bold;
 
         .link-hover({
           color: @osu-colour-c1;
