--- a/resources/assets/less/bem/news-post-preview.less
+++ b/resources/assets/less/bem/news-post-preview.less
@@ -93,7 +93,7 @@
     display: block;
     color: white;
     .link-hover({ color: white });
-    font-size: @font-size--title-small;
+    font-size: @font-size--title-small-3;
     margin: 5px 0px 10px 0px;
     font-style: normal;
 
@@ -103,11 +103,9 @@
   }
 
   &__post-content {
+    .content-font();
     font-size: @font-size--normal;
-    font-weight: 100;
-    p {
-      color: white;
-    }
+
     .@{top}--collapsed & {
       display: none;
     }
