--- a/resources/assets/less/bem/profile-extra-entries.less
+++ b/resources/assets/less/bem/profile-extra-entries.less
@@ -98,6 +98,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
     margin-right: 20px;
+
+    // FIXME: remove <em> in translation. Or any tags, even.
+    em {
+      font-style: normal;
+    }
   }
 
   &__icon {
