--- a/resources/assets/less/bem/report-form.less
+++ b/resources/assets/less/bem/report-form.less
@@ -48,6 +48,7 @@
     width: 200px;
     background-color: @osu-colour-b5;
     border-radius: 200px;
+    font-weight: 600;
 
     &[disabled] {
       &::before {
@@ -98,6 +99,10 @@
 
     &--exclamation {
       font-size: @font-size--large-2;
+    }
+
+    &--title {
+      font-weight: 300;
     }
   }
 
