--- a/resources/assets/less/bem/sort.less
+++ b/resources/assets/less/bem/sort.less
@@ -64,7 +64,7 @@
     &--active {
       background-color: @osu-colour-b3;
       color: @osu-colour-l1;
-      font-weight: bold;
+      font-weight: 600;
     }
   }
 
