--- a/resources/assets/less/bem/store-slider.less
+++ b/resources/assets/less/bem/store-slider.less
@@ -97,7 +97,7 @@
     }
 
     &.js-slider-preset--active {
-      background-color: @pink-darker;
+      background-color: @osu-colour-pink-1;
       .js-store--disabled & {
         background-color: @osu-colour-b1;
       }
@@ -125,8 +125,11 @@
         background-color: @osu-colour-b1;
       }
     }
+    .ui-slider-handle {
+      background-color: @osu-colour-pink-1;
+    }
     .ui-slider-range {
-      background-color: @pink-darker;
+      background-color: @osu-colour-pink-1;
     }
   }
 }
