--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -19,7 +19,7 @@
 .supporter-icon {
   .center-content();
   color: white;
-  background-color: @pink;
+  background-color: @osu-colour-pink-1;
 
   // TODO: combine with profile-info__icon--supporter somehow?
   height: 20px;
