--- a/resources/assets/less/bem/supporter-quote.less
+++ b/resources/assets/less/bem/supporter-quote.less
@@ -22,7 +22,7 @@
   padding: 30px;
   background-color: @osu-colour-b4;
   color: white;
-  font-size: @font-size--normal;
+  font-size: @font-size--title-small;
 
   &__body {
     display: flex;
