--- a/resources/assets/less/bem/supporter-status.less
+++ b/resources/assets/less/bem/supporter-status.less
@@ -97,7 +97,7 @@
   }
 
   &__text {
-    font-size: 11px;
+    font-size: @font-size--title-small;
     &--first {
       margin-bottom: 10px;
     }
