--- a/resources/assets/less/bem/tooltip-achievement.less
+++ b/resources/assets/less/bem/tooltip-achievement.less
@@ -96,6 +96,11 @@
     a {
       .link-white();
     }
+
+    // FIXME: update database and remove <i>
+    i {
+      font-style: normal;
+    }
   }
 
   &__main {
