--- a/resources/assets/less/bem/tooltip-beatmap.less
+++ b/resources/assets/less/bem/tooltip-beatmap.less
@@ -53,12 +53,11 @@
     }
 
     &--expert {
-      color: @diff-expert--light;
+      color: @diff-expert;
     }
 
     &--expert-plus {
-      // because black is unreadable on dark tooltip background
-      color: @diff-expert-plus--light;
+      color: @diff-expert-plus;
     }
 
     &--title {
