--- a/resources/assets/less/bem/tournament-list-item.less
+++ b/resources/assets/less/bem/tournament-list-item.less
@@ -57,7 +57,8 @@
     }
 
     &__tournament-date {
-      font-size: 17px;
+      font-size: @font-size--title-small-4;
+      font-weight: bold;
       padding-bottom: 5px;
 
       @media @mobile {
@@ -75,8 +76,7 @@
     }
 
     &__registrations {
-      color: @osu-colour-f1;
-      font-size: 15px;
+      font-size: @font-size--title-small-2;
 
       @media @mobile {
         font-size: 12px;
