--- a/resources/assets/less/bem/tournament.less
+++ b/resources/assets/less/bem/tournament.less
@@ -26,10 +26,12 @@
 
   &__body {
     .center-content();
+    .default-gutter-v2();
     display: flex;
     color: white;
     flex-direction: column;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 
   &__countdown-timer {
