--- a/resources/assets/less/bem/user-home.less
+++ b/resources/assets/less/bem/user-home.less
@@ -34,7 +34,7 @@
     padding: 20px 0 10px;
     font-size: @font-size--title-small-3;
     color: @osu-colour-l1;
-    font-weight: 100;
+    font-weight: bold;
   }
 
   &__beatmapsets {
@@ -80,7 +80,7 @@
     margin: 0;
     padding: 20px 0 10px @gutter-v2;
     font-size: @font-size--large;
-    font-weight: 100;
+    font-weight: bold;
     color: @osu-colour-l1;
 
     display: flex;
