--- a/resources/assets/less/bem/user-verification.less
+++ b/resources/assets/less/bem/user-verification.less
@@ -22,8 +22,8 @@
 
   padding: 70px 40px;
   text-align: center;
-  font-size: @font-size--normal;
-  font-weight: 300;
+  font-size: @font-size--title-small;
+  font-weight: 400;
 
   &__key {
     .default-border-radius();
