--- a/resources/assets/less/bootstrap-variables.less
+++ b/resources/assets/less/bootstrap-variables.less
@@ -24,7 +24,7 @@
 @brand-danger: @red;
 @brand-info: @blue;
 
-@text-color: @gray;
+@text-color: #fff;
 
 @link-color: @blue-darker;
 @link-hover-color: @blue;
