--- a/resources/assets/less/torus.less
+++ b/resources/assets/less/torus.less
@@ -49,6 +49,13 @@
 }
 
 @font-face {
+  // Torus-SemiBold, for default bold
+  font-family: 'Torus';
+  font-weight: 700;
+  src: url('@{torus-font-path}/Torus-SemiBold.otf');
+}
+
+@font-face {
   // Torus-Regular
   font-family: 'Torus';
   font-weight: 400;
@@ -72,6 +79,6 @@
 @font-face {
   // Torus-Bold
   font-family: 'Torus';
-  font-weight: 700;
+  font-weight: 800;
   src: url('@{torus-font-path}/Torus-Bold.otf');
 }
