--- a/resources/assets/less/bem/beatmap-icon.less
+++ b/resources/assets/less/bem/beatmap-icon.less
@@ -17,88 +17,38 @@
  */
 
 .beatmap-icon {
-  @top: beatmap-icon;
-
-  color: #fff;
-  font-size: 22px;
+  font-size: 22px; // icon size
   display: flex;
 
-  &::before {
-    .full-size();
-    .icon-bg();
-
-    content: ' ';
-    @margin: 2px;
-    @size: calc(100% - (@margin * 2));
-    height: auto;
-    width: @size;
-    padding-bottom: @size;
-    top: @margin;
-    left: @margin;
-    border-radius: 50%;
-    background-color: @pink;
-  }
-
   &--large {
-    font-size: 30px;
+    font-size: 30px; // icon size
   }
 
   &--beatmapset {
-    font-size: 40px;
+    font-size: 24px; // icon size
   }
 
   &--easy {
-    &::before {
-      background-color: @diff-easy;
-    }
+    color: @diff-easy;
   }
 
   &--normal {
-    &::before {
-      background-color: @diff-normal;
-    }
+    color: @diff-normal;
   }
 
   &--hard {
-    &::before {
-      background-color: @diff-hard;
-    }
+    color: @diff-hard;
   }
 
   &--insane {
-    &::before {
-      background-color: @diff-insane;
-    }
+    color: @diff-insane;
   }
 
   &--expert {
-    &::before {
-      background-color: @diff-expert;
-    }
+    color: @diff-expert;
   }
 
   &--expert-plus {
-    &::before {
-      background-color: @diff-expert-plus;
-    }
-  }
-
-  &__shadow {
-    .default-box-shadow();
-    .full-size();
-
-    .@{top}--with-hover:hover & {
-      .thicker-box-shadow();
-      transition: all 90ms ease-in-out; // 90ms to be in line with the tooltip (qtip2 default)
-    }
-
-    @margin: 1px;
-    @size: calc(100% - (@margin * 2));
-    height: auto;
-    width: @size;
-    padding-bottom: @size;
-    top: @margin;
-    left: @margin;
-    border-radius: 50%;
+    color: @diff-expert-plus;
   }
 }
