--- a/resources/assets/less/bem/btn-home.less
+++ b/resources/assets/less/bem/btn-home.less
@@ -50,7 +50,7 @@
   background-size: 175%;
   background-position: center;
 
-  font-size: @font-size--normal;
+  font-size: @font-size--title-small;
   font-weight: bold;
 
   margin-bottom: @border-size;
