--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -69,14 +69,8 @@
   }
 
   &__message-content {
-    display: flex;
-    word-break: break-word;
-    justify-content: space-between;
     font-family: @font-content;
-
-    a {
-      .link-default();
-    }
+    word-break: break-word;
 
     &--action {
       color: @osu-colour-l1;
@@ -101,6 +95,7 @@
   }
 
   &__message-timestamp {
+    font-family: @font-content;
     color: @osu-colour-f1;
     font-size: 10px;
     margin-top: 5px;
