--- a/resources/assets/less/bem/download-page.less
+++ b/resources/assets/less/bem/download-page.less
@@ -29,9 +29,10 @@
   align-items: center;
 
   @media @desktop {
-    padding: 40px 100px;
+    padding: 40px @gutter-v2-desktop;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: space-between;
   }
 
   &__accent {
@@ -39,7 +40,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 10px;
+    height: 2px;
     background-color: @osu-colour-h1;
   }
 
@@ -50,6 +51,10 @@
   &__step {
     width: 220px;
     padding-bottom: 20px;
+
+    @media @desktop {
+      padding-bottom: 0;
+    }
   }
 
   &__step-number {
@@ -63,8 +68,8 @@
   }
 
   &__text {
-    color: #fff;
-    font-size: 11px;
+    color: @osu-colour-c1;
+    font-size: @font-size--normal;
 
     &--description {
       padding-left: (@number-width + @number-margin-right);
@@ -72,7 +77,7 @@
 
     &--title {
       .center-content();
-      font-size: 15px;
+      font-size: @font-size--title-small-4;
       margin-bottom: 15px;
     }
   }
