--- a/resources/assets/less/bem/landing-hero.less
+++ b/resources/assets/less/bem/landing-hero.less
@@ -170,7 +170,7 @@
     margin: 0 0 5px;
     padding: 0;
     color: #fff;
-    font-size: @font-size--large;
+    font-size: @font-size--title;
   }
 
   &__slogan-sub {
@@ -178,6 +178,6 @@
     margin: 0;
     padding: 0;
     color: @pink-light;
-    font-size: @font-size--normal;
+    font-size: @font-size--title-small-3;
   }
 }
