--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -29,6 +29,7 @@
   padding: 5px 20px;
   border-radius: 10000px;
   width: max-content;
+  line-height: normal;
 
   background-color: @osu-colour-b2;
 
