--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -21,7 +21,7 @@
   font-size: 10px;
   background-color: osu-hsla(@osu-colour-b6, 0.75);
   padding: 2px 10px;
-  font-weight: bold;
+  font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
