--- a/resources/assets/less/bem/user-home-beatmapset.less
+++ b/resources/assets/less/bem/user-home-beatmapset.less
@@ -43,6 +43,7 @@
 
   &__artist {
     font-size: 12px;
+    font-weight: bold;
     margin-top: -3px;
   }
 
@@ -82,7 +83,7 @@
   }
 
   &__title {
-    font-size: 14px;
+    font-size: @font-size--title-small-3;
     margin-top: -2px;
   }
 }
