--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -75,6 +75,7 @@
 
 @border-radius--nav-avatar: 10px;
 @border-radius--extra: 20px;
+@border-radius--large: 10px;
 
 @forum-item-overflow: @gutter-v2 - 2px;
 @forum-item-overflow-desktop: @gutter-v2-desktop - 20px;
@@ -302,11 +303,8 @@
 @diff-normal: @blue;
 @diff-hard: @yellow;
 @diff-insane: @pink;
-@diff-expert: @purple;
-@diff-expert--light: @purple-light;
-@diff-expert-plus: #000;
-// for when black text won't just work on dark background
-@diff-expert-plus--light: #999;
+@diff-expert: @purple-light;
+@diff-expert-plus: #999;
 
 // store slider
 @slider-callout--arrow-height: 12px;
