Adjust dashboard news post preview title

--- a/resources/assets/less/bem/news-post-preview.less
+++ b/resources/assets/less/bem/news-post-preview.less
@@ -95,7 +95,7 @@
     .link-hover({ color: white });
     font-size: @font-size--title-small-3;
     margin: 5px 0px 10px 0px;
-    font-style: normal;
+    font-weight: bold;
 
     .@{top}--collapsed & {
       margin: 0px;
