--- a/resources/assets/less/bem/news-post-preview.less
+++ b/resources/assets/less/bem/news-post-preview.less
@@ -94,11 +94,11 @@
     color: white;
     .link-hover({ color: white });
     font-size: @font-size--title-small-3;
-    margin: 5px 0px 10px 0px;
+    margin: 5px 0 10px;
     font-weight: bold;
 
     .@{top}--collapsed & {
-      margin: 0px;
+      margin: 0;
       font-size: @font-size--title-small;
     }
   }
