--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -227,6 +227,9 @@
 @import "bem/news-card";
 @import "bem/news-index";
 @import "bem/news-post-preview";
+@import "bem/news-show";
+@import "bem/news-sidebar-month";
+@import "bem/news-sidebar-years";
 @import "bem/notification-banner-v2";
 @import "bem/notification-icon";
 @import "bem/notification-index";
@@ -253,6 +256,7 @@
 @import "bem/page-mode";
 @import "bem/page-mode-link";
 @import "bem/page-nav";
+@import "bem/page-nav-fancy";
 @import "bem/page-tabs";
 @import "bem/page-title";
 @import "bem/pagination-v2";
