--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -66,13 +66,9 @@
   }
 
   &--news {
-    padding: 20px 25px 0;
+    padding: 0;
     color: @osu-colour-c1;
     font-size: @font-size--wiki;
-
-    @media @mobile {
-      padding: 20px 0 0;
-    }
   }
 
   &--store-product {
