--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -71,6 +71,8 @@
 @gutter-v2: 10px;
 @gutter-v2-desktop: 50px;
 
+@gutter-sidebar-desktop: 30px;
+
 @height--nav-popup: 210px; // min-height; actual height will be calculated by js.
 
 @border-radius--nav-avatar: 10px;
