Don't strip leading whitespace in the display of review posts (to match leading whitespace in the editor)

--- a/resources/assets/less/bem/beatmap-discussion-review-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post.less
@@ -17,6 +17,10 @@
  */
 
 .beatmap-discussion-review-post {
+  &__block {
+    white-space: pre-wrap;
+  }
+
   &__link {
     .link-default();
   }
