Add mobile menu

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -314,6 +314,7 @@
 @import "bem/search-result-more";
 @import "bem/search-wiki-page";
 @import "bem/show-more-link";
+@import "bem/sidebar";
 @import "bem/simple-form";
 @import "bem/simple-menu";
 @import "bem/sort";
