Fix variable name

--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -131,7 +131,7 @@
         font-size: @font-size--header-title;
       }
 
-      .@{top}--wiki & {
+      .@{_top}--wiki & {
         margin-right: 0;
         margin-bottom: 10px;
         margin-left: -20px;
