Update group listing page
- add group name
- fix title
- fix margins

--- a/resources/assets/less/bem/update-streams-v2.less
+++ b/resources/assets/less/bem/update-streams-v2.less
@@ -18,12 +18,12 @@
 
 .update-streams-v2 {
   @_top: update-streams-v2;
-  padding: 20px (@gutter - 5px);
+  padding: 20px (@gutter-v2 - 5px);
   background-color: @osu-colour-b5;
 
   @media @desktop {
-    padding-left: (@gutter-desktop - 5px);
-    padding-right: (@gutter-desktop - 5px);
+    padding-left: (@gutter-v2-desktop - 5px);
+    padding-right: (@gutter-v2-desktop - 5px);
   }
 
   &__container {
