Add some more obvious feedback that we're in editor mode

--- a/resources/assets/less/bem/beatmap-discussion-editor.less
+++ b/resources/assets/less/bem/beatmap-discussion-editor.less
@@ -55,7 +55,7 @@
 
     .@{_top}--edit-mode & {
       margin: 0 -15px;
-      border-radius: 0;
+      border: 2px solid hsl(200, 60%, 50%);
     }
   }
 
